--- a/index.html
+++ b/index.html
@@ -22,21 +22,25 @@
         }
 
         * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-        }
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    /* 必須加入 "PingFang TC" (蘋果黑體) */
+    font-family: -apple-system, BlinkMacSystemFont, "PingFang TC", "Hiragino Sans GB", "Microsoft JhengHei", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+}
 
-        body {
-            background-color: var(--bg);
-            color: var(--charcoal);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            min-height: 100vh;
-            padding: 40px 20px;
-        }
+body {
+    background-color: var(--bg);
+    color: var(--charcoal);
+    /* 這裡也要加 */
+    font-family: -apple-system, "PingFang TC", sans-serif;
+}
+
+/* 🌟 針對輸入框與按鈕的特別強化 (Safari 常在這出錯) */
+input, button, select, textarea {
+    font-family: inherit !important;
+    -webkit-appearance: none; /* 移除 Safari 預設樣式 */
+}
 
         /* 頂部 Header */
         header {
