--- a/index.html
+++ b/index.html
@@ -12,29 +12,39 @@
     <meta property="og:url" content="https://app.jusmilespace.com">
 
     <style>
-    /* 1. 強制所有層級使用系統黑體，移除多餘的大括號 */
+    /* 🌟 1. 強制全域字體修正 */
     html, body, #root, * {
         box-sizing: border-box;
         margin: 0;
         padding: 0;
-        /* 將 PingFang TC 放在最前面，這是 iOS 顯示黑體的關鍵 */
-        font-family: "PingFang TC", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !important;
+        /* 必須將 PingFang TC 放在最前面，且不加多餘的括號 */
+        font-family: "PingFang TC", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif !important;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
     }
 
-    /* 2. 確保表單控制元件也繼承字體 */
+    /* 🌟 2. 確保輸入框與按鈕在 Safari 不會走鐘 */
     input, button, textarea, select {
         font-family: inherit !important;
         font-size: inherit;
+        -webkit-appearance: none; /* 移除 Safari 預設的立體陰影 */
+        border-radius: 0;
     }
 
-    /* 3. 修正 body 背景與顏色 */
-    body {
-        background-color: #f7faf9; /* 你的 var(--bg) */
-        color: #1f2937;           /* 你的 var(--charcoal) */
+    /* 🌟 3. 重新定義變數與基礎樣式 */
+    :root {
+        --mint: #97d0ba;
+        --mint-dark: #5c9c84;
+        --charcoal: #1f2937;
+        --bg: #f7faf9;
     }
-</style>
+
+    body {
+        background-color: var(--bg);
+        color: var(--charcoal);
+        line-height: 1.6;
+    }
+
 
         /* 頂部 Header */
         header {
